sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:38: error: ';' expected but identifier found.
    } i+=1
      ^